--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "bcrypt": "^5.1.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.3.5",
     "validator": "^13.9.0"
   }
